# blitz-embed

./: Dockerfile  LICENSE  README.md  serverless.yaml  test.http
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: docker-image.yml
bert_cpp/: api.py  model.py
src/: CMakeLists.txt  bert.cpp  bert.h  run_aws.cpp  run_gcr.cpp
tests/: conftest.py
